# applika

./: .gitignore  BACKEND_ARCHITECTURE.md  CONTRIBUTORS.md  README.md  SECURITY.md  admin.md
backend/: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/.claude/skills/backend-patterns/: SKILL.md
backend/.claude/skills/backend-patterns/references/: dtos-and-schemas.md  exceptions-and-logging.md  migrations-and-tests.md  models-and-repos.md  use-cases-and-di.md
backend/app/: main.py
backend/app/application/dto/: __init__.py  admin.py  agenda.py  application.py  application_step.py  company.py  cycle.py  feedback_definition.py  platform.py  quinzenal_report.py  statistic.py  step_definition.py  support.py  user.py  user_feedback.py
backend/app/application/services/: discord_service.py  github_service.py
backend/app/application/use_cases/: create_application.py  create_application_step.py  delete_application.py  delete_application_step.py  finalize_application.py  get_current_user.py  get_general_statistics.py  get_supports.py  get_user_agenda.py  list_application_steps.py  refresh_token.py  update_application_step.py  update_user.py  user_registration.py
backend/app/application/use_cases/application_steps/: create_application_step.py  delete_application_step.py  list_application_steps.py  update_application_step.py
backend/app/application/use_cases/applications/: create_application.py  delete_application.py  finalize_application.py  list_applications.py  update_application.py
backend/app/application/use_cases/companies/: create_company.py  list_companies.py
backend/app/application/use_cases/cycles/: create_cycle.py  delete_cycle.py  list_cycles.py
backend/app/application/use_cases/quinzenal_reports/: common.py  get_report.py  list_reports.py  submit_report.py
backend/app/application/use_cases/user_feedbacks/: submit_feedback.py
backend/app/application/use_cases/user_stats/: get_conversion_rate.py  get_general_statistics.py  (+4 more)
backend/app/application/validators/: application_date.py
backend/app/config/: db.py  logging.py  middleware.py  redis.py  settings.py
backend/app/core/: crypto.py  enums.py  exceptions.py  tokens.py
backend/app/domain/: models.py
backend/app/domain/repositories/: admin_repository.py  application_repository.py  application_step_repository.py  company_repository.py  cycle_repository.py  feedback_definition_repository.py  platform_repository.py  quinzenal_report_repository.py  step_definition_repository.py  user_feedback_repository.py  user_repository.py  user_statistic_repository.py
backend/app/lib/: types.py  urls.py
backend/app/presentation/: dependencies.py  handlers.py
backend/app/presentation/api/: admin.py  application.py  application_step.py  company.py  cycle.py  oauth.py  reports.py  statistic.py  support.py  user.py  user_feedback.py
backend/app/presentation/schemas/: __init__.py  admin.py  application.py  application_step.py  company.py  cycle.py  quinzenal_report.py  statistic.py  support.py  user.py  user_feedback.py
backend/app/tests/: __init__.py  base_db_setup.py  conftest.py
backend/app/tests/integration/: test_applications.py  test_i.py  test_quinzenal_reports.py
backend/app/tests/unit/: test_quinzenal_reports_common.py  test_u.py
backend/migrations/: env.py
backend/migrations/versions/: 07d97858223f_application_step_user_id.py  49792420ad7b_add_user_feedbacks_table.py  77c96a061d09_add_enums_and_new_columns_to_users_and_applications.py  79f1d9bc77de_quinzenal_reports.py  83243abba58d_strict_step_definition.py  8ed990326196_step_table_renamed.py  a1b2c3d4e5f6_convert_ids_to_snowflake_biginteger.py  a1b2c3d4e5f7_add_time_fields_to_application_steps.py  a33d23ad4276_column_names_and_types_adjustments.py  b1d8d288c6e5_companies_table_created_and_company_id_.py  b2c3d4e5f6a1_company_changes_in_applications.py  c4f8a1b2d3e5_add_cycles_table.py  d5e6f7a8b9c0_add_github_token_and_org_member.py  d997fc17b3d3_applications_link_to_job.py  e3abe9dc93d4_init_db.py  f1a2b3c4d5e6_add_is_admin_to_users.py
backend/scripts/: seed_mock_data.py
backend/tests/: __init__.py  base_db_setup.py  conftest.py
backend/tests/integration/: conftest.py  test_admin.py  test_application_steps.py  test_applications.py  test_companies.py  test_cycles.py  test_date_validations.py  test_delete_account.py  test_delete_cycle.py  test_finalize.py  test_past_cycle_data.py  test_quinzenal_reports.py  test_statistics.py  test_supports.py  test_users.py
backend/tests/unit/: conftest.py  test_admin_access.py  test_application_steps_uc.py  test_conversion_rate.py  test_create_application.py  test_create_cycle.py  test_delete_application.py  test_delete_cycle.py  test_finalize_application.py  test_general_statistics.py  test_get_current_user.py  test_list_with_cycle.py  test_mode_stats.py  test_platform_stats.py  test_quinzenal_report_repository.py  test_quinzenal_reports_common.py  test_step_avg_days.py  test_u.py  test_update_application.py  test_update_user.py
(+399 files in other folders)
