[tool.poetry]
name = "app-panel-api"
version = "0.1.0"
description = ""
authors = []
license = ""
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
alembic = "^1.16.4"
sqlalchemy = "^2.0.42"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
email-validator = "^2.2.0"
asyncpg = "^0.30.0"
fastapi-sso = "^0.18.0"
testcontainers = {extras = ["postgres"], version = "^4.13.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-env = "^1.1.5"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.2.0"
autopep8 = "^2.3.2"
ruff = "^0.13.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=xml"

[tool.pytest_env]
ENVIRONMENT = "TEST"
# fake url - will be replaced by testcontainer instance during tests
DATABASE_URL = "postgresql+asyncpg://user:password@127.0.0.1:5432/testdb"
GITHUB_CLIENT_ID = "fake_client_id"
GITHUB_CLIENT_SECRET = "fake_client_secret"

[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint.pycodestyle]
# E501 reports lines that exceed the length of 120.
max-line-length = 120

[tool.ruff.lint.pydoclint]
# Skip docstrings which fit on a single line.
ignore-one-line-docstrings = true

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT']

[tool.ruff.format]
preview = true
quote-style = "single"

# https://coverage.readthedocs.io/en/latest/excluding.html
[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    'log\.error\(',
    'log\.info\(',
    'log\.debug\(',
    'except Exception:\s*\n\s*pass',
    'except Exception:\s*\n\s*...',
]

[tool.taskipy.tasks]
run = "uvicorn app.main:app --port 8000 --reload --log-level debug"
pytest = 'pytest .'
ruff = "ruff check ./app --fix"
autorevision = "alembic revision --autogenerate -m 'autogenerated'"
auhead = "alembic upgrade head"
adbase = "alembic downgrade base"
