[project]
name = "app-panel-api"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "fastapi-sso>=0.18.0",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.3.0",
    "snowflake-id>=1.0.2",
    "redis[hiredis]>=7.4.0",
    "cryptography>=46.0.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.5.0",
    "autopep8>=2.3.2",
    "ruff>=0.15.2",
    "taskipy>=1.14.1",
    "testcontainers[postgres]>=4.14.1",
    "ty>=0.0.19",
    "freezegun>=1.5.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=html --cov-report=xml"

[tool.pytest_env]
ENVIRONMENT = "TEST"
# Disable the Ryuk reaper container - avoids port-mapping race conditions on Windows
TESTCONTAINERS_RYUK_DISABLED = "true"
# fake url - will be replaced by testcontainer instance during tests
DATABASE_URL = "postgresql+asyncpg://user:password@127.0.0.1:5432/testdb"
GITHUB_CLIENT_ID = "fake_client_id"
GITHUB_CLIENT_SECRET = "fake_client_secret"
JWT_SECRET = "test-secret-key-long-enough-for-hs256-minimum-32-bytes"

[tool.ruff]
line-length = 80

[tool.ruff.lint.pycodestyle]
# E501 reports lines that exceed the length of 120.
max-line-length = 120

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT']

[tool.ruff.format]
preview = true
quote-style = "single"

# https://coverage.readthedocs.io/en/latest/excluding.html
[tool.coverage.run]
omit = [
    "app/main.py",
    "app/__init__.py",
    "app/**/__init__.py",
    "app/config/db.py",
    "app/config/settings.py",
    "app/presentation/api/oauth.py",
    "app/lib/urls.py",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    'logger\.\w+\(',
    'except Exception:\s*\n\s*pass',
    'except Exception:\s*\n\s*...',
]

[tool.taskipy.tasks]
seed = "python scripts/seed_mock_data.py"
run = "uvicorn app.main:app --port 8000 --reload --log-level debug"
pytest = 'pytest .'
ruff = "ruff check ./app --fix"
autorevision = "alembic revision --autogenerate -m=/"
auhead = "alembic upgrade head"
adbase = "alembic downgrade base"
